--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -740,3 +740,35 @@ pre {
 #url-rewriting-warning {
 	display:none;
 }
+
+#connect a {
+	font-size: 25px;
+	position:absolute;
+	z-index: 3;
+	top:20px;
+	right: 25px;
+	text-decoration: none;
+	color:black;
+	padding:10px;
+	background-color:#ffffff;
+	border-radius: 10px;
+	/*	background:#62af56;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#76BF6B), to(#3B8230));
+	background-image: -webkit-linear-gradient(top, #76BF6B, #3B8230);
+	background-image: -moz-linear-gradient(top, #76BF6B, #3B8230);
+	border-color: #2d6324;
+	color: #fff;
+	text-shadow: rgba(0, 0, 0, 0.5) 0px -1px 0px;
+	padding: 8px 10px;*/
+}
+
+#ruconnect {
+	color:#ffffff;
+	background-color:#003D4C;
+}
+
+.quotes_viewpers {
+/*	text-decoration: none;
+	color:#fff;*/
+	background: #ddd;
+}
